Re-wrote Millard12EqMuscleWithAfferents to be more in line with what OpenSim expects. We now are able to read out Ia, Ib, and II signals from each muscle and Millard12EquMuscleWithAfferents can be used in the XML file as with its parent class. We are ready for MIIND integration.

--- a/modified_arm_model/CMakeLists.txt
+++ b/modified_arm_model/CMakeLists.txt
@@ -18,7 +18,7 @@ find_package(Simbody REQUIRED PATHS "${SIMBODY_INSTALL_DIR}")
 # Configure this project.
 # -----------------------
 file(GLOB AFFERENT_SOURCE_FILES Afferent/*.h Afferent/*.cpp)
-file(GLOB SOURCE_FILES *.h *.cpp)
+file(GLOB SOURCE_FILES test_redux.cpp)
 
 add_executable(${TARGET} ${AFFERENT_SOURCE_FILES} ${SOURCE_FILES})
 
